# Parsimony-CGO23

./: .clang-format  LICENSE.TXT  README.md
apps/ispc-benchs/ispc/: CMakeLists.txt
apps/ispc-benchs/ispc/aobench/: CMakeLists.txt  ao.cpp
apps/ispc-benchs/ispc/cmake/: AddISPCExampleLegacy.cmake  AddISPCExampleModern.cmake
apps/ispc-benchs/ispc/deferred/: CMakeLists.txt  main.cpp
apps/ispc-benchs/ispc/mandelbrot/: mandelbrot.cpp
apps/ispc-benchs/ispc/noise/: noise.cpp
apps/ispc-benchs/ispc/options/: CMakeLists.txt  options.cpp
apps/ispc-benchs/ispc/rt/: rt.cpp
apps/ispc-benchs/ispc/stencil/: stencil.cpp
apps/ispc-benchs/ispc/volume_rendering/: volume.cpp
apps/ispc-benchs/psv/: Makefile  Math.h  ao.cpp  mandelbrot.cpp  noise.cpp  options.cpp  stencil.cpp  volume.cpp
apps/ispc-benchs/scripts/: build_ispc.sh  run_ispc.sh
apps/synet-simd/: .gitignore
apps/synet-simd/psimdlib/: AbsDifference.cpp  AbsDifferenceSum.cpp  AbsGradientSaturatedSum.cpp  AddFeatureDifference.cpp  AlphaBlending.cpp  Base64.cpp  BaseBackground.cpp  BayerToBgr.cpp  BgrToBayer.cpp  Binarization.cpp  Conditional.cpp  Makefile  Math.h  Neural.cpp  psimdlib.h
apps/synet-simd/scripts/: build_simdlib.sh  parse_simdlib_results.sh  run_simdlib.sh
compiler/: CMakeLists.txt  README.md  parsimony.py
compiler/include/: parsim.h
compiler/src/: argument_reader.h  broadcast.cpp  broadcast.h  diagnostics.cpp  diagnostics.h  function.cpp  function.h  inst_order.cpp  inst_order.h  live_out.cpp  live_out.h  main.cpp  mask.cpp  mask.h  module.cpp  module.h  prints.cpp  prints.h  rename_values.cpp  rename_values.h  resolver.cpp  resolver.h  shape.cpp  shape.h  shape_calc.cpp  shape_calc.h  shape_checker.cpp  shapes.cpp  shapes.h  transform.cpp  transform.h  utils.cpp  utils.h  value_cache.cpp  value_cache.h  vectorize.cpp  vectorize.h  vfabi.cpp  vfabi.h
compiler/tests/: alloca.cpp  and2.cpp  cout.cpp  cout_nested.cpp  funcall.cpp  gep_test1.cpp  gep_test2.cpp  head_tail.cpp  head_tail2.cpp  interleave3.cpp  interleave4.cpp  memcpy_elision.cpp  multidim_const_vect.cpp  new_syntax.cpp  packed_shuffle.cpp  packed_shuffle2.cpp  packed_shuffle3.cpp  packed_shuffle4.cpp  printf.cpp  run.sh  sad.cpp  sad2.cpp  shuffle.cpp  shuffle2.cpp  shuffle_simple.cpp  shuffle_zip.cpp  simple.cpp  simple_loop.cpp  simple_printf.cpp  simple_struct.cpp  struct.cpp  umulh.cpp  uniform_feeding_varying.cpp  unpack.cpp  vec_math.cpp  zip_unzip.cpp
results/: parsimony_cgo23.xlsx
results/authors_results/: ispcbench_results_authors.csv  parsimony_cgo23_authors.xlsx  simdlib_results_authors.csv
scripts/: install_prereqs.sh  install_psim_and_apps.sh  run_apps.sh  setup_environment.sh  uninstall_psim_and_apps.sh
(+39 files in other folders)
